add generate_log_format_regex(), unimplemented.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 lazy_static = "*"
 csv = "*"
 chrono = "*"
+fancy-regex = "*"
 regex = "*"
+pcre2 = "*"
 tqdm = "*"
 log = "*"
 env_logger = "*"
