Improve the performance of EasyLog.

--- a/data/easylog_configs/Android.config.toml
+++ b/data/easylog_configs/Android.config.toml
@@ -1,10 +1,10 @@
 specific = [
-    '((?:true)|(?:false))',
     '((?<=action=)[^,]+)',
 ]
 [substitute]
+'((?:true)|(?:false))'          = '<BOOL>'
+'".*?"'                         = '<STR>'
 '(?<a>\w+)=([^\s]*)'            = '$a <$a>'
-'\".*?\"'                       = '<STR>'
-'([\w-]+\.){2,}[\w-]+'          = '<DOMAIN>'
+'([\w$-]+\.){2,}[\w$-]+'         = '<DOMAIN>'
 '<bottom of call stack>'        = '<BOCS>'
-'[:\s]+'                        = ' '
+'[:\s\(\)\{\}]+'                = ' '
