--- a/data/easylog_configs/BGL.config.toml
+++ b/data/easylog_configs/BGL.config.toml
@@ -1,6 +1,7 @@
 specific = []
 [substitute]
-'(?<a>\w+)=([^\s]*)'            = '$a <$a>'
-'\/\w+(\/\w+)+\/\w+(\.\w+)?'    = '<PATH>'
-'chdir\(.*?\)'                  = 'chdir(<*>()'
-'[\.:\s]+'                      = ' '
+'(?<=loading ).* '             = '<FILE> '
+'(?<a>\w+)=([^\s]*)'           = '$a <$a>'
+'(\/\w+)+\/\w+(\.\w+)?'        = '<PATH>'
+'chdir\(.*?\)'                 = 'chdir(<*>()'
+'[\.\s]+'                      = ' '
