--- a/data/easylog_configs/OpenSSH.config.toml
+++ b/data/easylog_configs/OpenSSH.config.toml
@@ -1,5 +1,5 @@
 specific = []
 [substitute]
 '(?<a>\w+)=([^\s]*)' = '$a <$a>'
-'user ([^\s]*)' = 'user <USERNAME>'
-'for ([^\s]*)'  = 'for <USERNAME>'
+'(?<=user )([^\s]*)' = '<USERNAME>'
+'(?<=for )([^\s]*)'  = '<USERNAME>'
