--- a/data/easylog_configs/Linux.config.toml
+++ b/data/easylog_configs/Linux.config.toml
@@ -1,5 +1,5 @@
 specific = []
 [substitute]
 '(\d+\.){3}\d+(:\d+)? \((([\w-]+\.){2,}[\w-]+)?\)' = '<IP> <DOMAIN>'
-'user \b\w+\b' = 'user <USERNAME>'
+'(?<=user )\b\w+\b'  = '<USERNAME>'
 '(?<a>\w+)=([^\s]*)' = '$a <$a>'
