feat(counter):Use crate(counter) instead of util::counter.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ simplelog = "*"
 toml = "*"
 serde = {version = "*", features = ["derive"]}
 clap = {version = "*", features = ["derive"]}
+colored = "*"
+counter = "*"
