--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde = {version = "*", features = ["derive"]}
 clap = {version = "*", features = ["derive"]}
 colored = "*"
 counter = "*"
+polars = "*"
