refactor(easylog): Refactor easylog.rs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ serde = {version = "*", features = ["derive"]}
 clap = {version = "*", features = ["derive"]}
 colored = "*"
 counter = "*"
-polars = "*"
+polars-core = "*"
