--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "*"
-csv = "*"
-chrono = "*"
-fancy-regex = "*"
-tqdm = "*"
-log = "*"
-simplelog = "*"
-toml = "*"
-serde = {version = "*", features = ["derive"]}
-clap = {version = "*", features = ["derive"]}
-colored = "*"
-counter = "*"
-polars-core = "*"
+lazy_static = "1.4.0"
+csv = "1.2.1"
+chrono = "0.4.24"
+fancy-regex = "0.11.0"
+tqdm = "0.4.4"
+log = "0.4.17"
+simplelog = "0.12.1"
+toml = "0.7.4"
+serde = {version = "1.0.163", features = ["derive"]}
+clap = {version = "4.3.0", features = ["derive"]}
+colored = "2.0.0"
+counter = "0.5.7"
