feat(config): Add logformat to configs.

--- a/data/easylog_configs/BGL.config.toml
+++ b/data/easylog_configs/BGL.config.toml
@@ -1,3 +1,4 @@
+logformat = '<Label> <Timestamp> <Date> <Node> <Time> <NodeRepeat> <Type> <Component> <Level> <Content>'
 specific = []
 [substitute]
 '(?<=loading ).* '             = '<FILE> '
