--- a/data/easylog_configs/Hadoop.config.toml
+++ b/data/easylog_configs/Hadoop.config.toml
@@ -1,3 +1,4 @@
+logformat = '<Date> <Time> <Level> \[<Process>\] <Component>: <Content>'
 specific = []
 [substitute]
 '([\w-]+\.){2,}[\w-]+' = '<DOMAIN>'
