--- a/data/easylog_configs/Mac.config.toml
+++ b/data/easylog_configs/Mac.config.toml
@@ -1,3 +1,4 @@
+logformat = '<Month>  <Date> <Time> <User> <Component>\[<PID>\]( \(<Address>\))?: <Content>'
 specific = []
 [substitute]
 '([\w-]+\.){2,}[\w-]+'  = '<DOMAIN>'
